# WindVaneMCP

./: .env.example  README.md  alembic.ini  claude_desktop_config.example.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
config/: settings.toml
spec/: 風向計MCP規格_v1.2.md
sql/: schema.sql
tests/: conftest.py  test_apply_rules_integration.py  test_bahamut_scope.py  test_dcard_url.py  test_exchange_rate_parse.py  test_keyword_trend.py  test_komica_filter.py  test_mobile01_url.py  test_notifier_pure.py  test_notifier_triggers.py  test_post_filter.py  test_post_filter_full.py  test_posts_query.py  test_ptt_parse.py  test_pushes_history.py  test_query_recommendations.py  test_query_review.py  test_rules.py  test_top_posts_query.py  test_upsert_post.py
wind_vane/: config.py  log.py  server.py
wind_vane/db/: connection.py  models.py  seed.py
wind_vane/notifier/: __main__.py  main.py
wind_vane/rules/: engine.py
wind_vane/toolkits/crawlers/: bahamut_search.py  dcard_search.py  exchange_rate.py  komica_search.py  mobile01_search.py  post_filter.py  ptt_search.py  upsert.py
wind_vane/toolkits/queries/: keyword_trend.py  posts_query.py  query_recommendations.py  query_review.py  top_posts.py
