[project]
name = "wind-vane-mcp"
version = "0.1.0"
description = "風向計 MCP Server — 台灣論壇代購情報爬蟲系統"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "crawlee[playwright,beautifulsoup]>=1.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "aiosmtplib>=3.0",
    "tomli>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
